installr 0.9.1 (2013-04-04)
---------------------------

NEW FUNCTIONS ADDED:
   * checkMD5sums2 - Just like checkMD5sums from the tools package, but with the added md5file parameter. (useful for manually checking if the downloaded R EXE installer is fine, combined with this MD5 file: http://cran.rstudio.com/bin/windows/base/md5sum.txt)

UPDATED FUNCTIONS:
   * install.URL - updated the error massage to explain better what (probably) went wrong.  And engorage the users to e-mail me with bug reports.
   * add.installr.GUI - made sure the function wouldn't add items if "Update" is already present. e.g: made a fail-safe machanism in case the function installr:::add.installr.GUI() is run more than once (my thanks goes to Dieter Menne for the suggestion)
   * install.R - Updated the warning massage on install.R in case checkMD5sum fails.
   * updateR - added the to_checkMD5sums parameter to updateR (to be passed on to install.R() )

BUG FIXES:
   * install.pandoc - fixed it to work with the new URL scheme they've chosen for their site (they moved to MSI instead of .EXE about two weeks ago...)
   * updateR - fixed a type in the installation massage (thanks to Henrik Pärn)

OTHER NOTES:
   * Fixed wrongly used capital letters (for example, in the NEWS file)


installr 0.9 (2013-03-29)
---------------------------

UPDATED FUNCTIONS:
   * Made sure to include a lower-case version of all install.X functions.

OTHER NOTES:
   * More documentation.  Updated README.md
   * installr 0.9 is to be shiped to CRAN.



installr 0.8.8 (2013-03-26)
---------------------------
NEW FUNCTIONS ADDED:
   * install.notepadpp
   * install.npptor
   * install.Cygwin
   * install.LaTeX2RTF



installr 0.8.7 (2013-03-16)
---------------------------
NEW FUNCTIONS ADDED:
   * install.SWFTools
   * install.FFmpeg
   * install.7zip - for unzipping of FFmpeg
   * system.PATH - to see what is in the users PATH for running .exe programs.

UPDATED FUNCTIONS: