@@ -3,7 +3,7 @@ Type: Package
 Title: Functions for updating and installing a new version of R and other
     software - from R
 Version: 0.9.1
-Date: 2013-03-30
+Date: 2013-04-04
 Author: Tal Galili
 Maintainer: Tal Galili <tal.galili@gmail.com>
 Description: The 'installr' package aims at making the process of updating R on
